<resources>
    <string name="app_name">iPower Saving</string>
    <string name="version">version 2.0.1</string>

    <!--MainActivity-->
    <string name="loading">Loading...</string>
    <string name="testing_account">testing@ipowersaving.com</string>
    <string name="testing_name">iPS Testing Account</string>
    <string name="internet_error">Internet error</string>
    <string name="auth_error">Authentication error</string>
    <string name="try_again">Try again</string>

    <!--MessageFragment-->
    <string name="unread">Unread</string>
    <string name="read">Read</string>
    <string name="inbox">Inbox</string>
    <string name="starred">Starred</string>
    <string name="followed">Followed buildings</string>
    <string name="all_mails">All mails</string>
    <string name="trash">Trash</string>
    <string name="label_default">unread,unstar,inbox,</string>
    <string name="event_reported_around">Reported around</string>
    <string name="delete_caption1">You deleted</string>
    <string name="delete_caption2">mail(s).</string>

    <!--InboxFragment-->
    <string name="no_mail">No mail in this mailbox.</string>

    <!--SettingsFragment-->
    <string name="fragment_settings_title">Settings</string>
    <string name="logout">Log out</string>
    <string name="diaplay_name">Display name</string>
    <string name="pic_instruc">Click to change profile picture</string>
    <string name="email">Email</string>
    <string name="subscribed_channels">Subscribed channels</string>
    <string name="event_channels">Event channel</string>
    <string name="public_channels">Public channel</string>
    <string name="upload_profilepic">Uploading...</string>
    <string name="upload_profilepic_fail">Upload to upload image, <u>try again</u></string>

    <!--HomeFragment-->
    <string name="fragment_home_title">Dashboard</string>
    <string name="no_building">No building is followed.</string>
    <string name="energy_eff_unit">\u0020%\u0020</string>

    <!--BuildingFragment-->
    <string name="follow_this">Follow this</string>
    <string name="unfollow_this">Unfollow this</string>
    <string name="chart_title">Daily Energy Consumption</string>
    <string name="chart_x_title">Hour</string>
    <string name="chart_y_title">Daily Energy Consumption (kWh)</string>
    <string name="use_dept">Department using:\u0020</string>
    <string name="consump_this_hour">Current consumption:\u0020</string>
    <string name="consump_last_hour">Last hour consumption:\u0020</string>
    <string name="info_title">Real-time Information</string>

    <!--EventFragment-->
    <string name="fragment_event_title">FIXIT Event</string>
    <string name="fragment_event_title_add">Add an FIXIT event</string>
    <string name="fragment_event_bottom">Long click on map to add a new FIXIT event</string>
    <string name="fragment_event_bottom_add">Please enter an event and take a photo of it</string>
    <string name="fragment_event_btn_full_map">Full map</string>
    <string name="fragment_event_hint">Event, Building, Floor, etc.</string>
    <string name="fragment_event_err_no_ed">Please enter at least one item name.</string>

    <!--ReportFragment-->
    <string name="send_to">Send to</string>
    <string name="content_hint">Enter event details here ...</string>
    <string name="title_hint">Enter an event title</string>
    <string name="fragment_report_title">Report an event</string>
    <string name="send_message">Sending ...</string>
    <string name="message_sent">Your message has been sent successfully</string>

    <!--Imgur API-->
    <string name="notification_fail">Failed to upload image...</string>
    <string name="notification_share_link">Share link</string>
    <string name="notifaction_success">Successfully uploaded</string>
    <string name="notification_progress">Uploading image...</string>

    <!--BuildingIcon-->
    <string name="decrease_weekly">decrease over 1 week</string>
    <string name="increase_weekly">increase over 1 week</string>

    <!--AlertDialogManager-->
    <string name="alert_dialog_manager_camera_title">Get a photo for the event from:</string>
    <string name="alert_dialog_manager_camera_camera">Camera</string>
    <string name="alert_dialog_manager_camera_photo">My photo gallery</string>
    <string name="alert_dialog_manager_ok">Okay</string>
    <string name="alert_dialog_manager_error">Error</string>
    <string name="alert_dialog_manager_img_title">Current Image</string>
    <string name="alert_dialog_manager_img_take_new">Take a new one</string>
    <string name="alert_dialog_manager_img_use_this">Use this</string>
    <string name="alert_dialog_manager_crop_img_crop">Crop</string>
    <string name="alert_dialog_manager_crop_img_revert">Revert</string>
    <string name="alert_dialog_manager_fail_publish">Fail to publish this event. Please try again.</string>
</resources>
