<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:minWidth="@dimen/alert_dialog_manager_min_width"
    android:orientation="vertical"
    android:padding="0dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/activity_main_space"
        android:background="@color/colorPrimaryLTDark"
        android:gravity="center_horizontal"
        android:padding="@dimen/activity_main_space"
        android:text="@string/alert_dialog_manager_img_title"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="@color/white" />

    <it.sephiroth.android.library.imagezoom.ImageViewTouch
        android:id="@+id/obj_dialog_image_iv"
        android:layout_width="@dimen/alert_dialog_manager_single_img_size"
        android:layout_height="@dimen/alert_dialog_manager_single_img_size"
        android:layout_gravity="center_horizontal"
        android:layout_margin="@dimen/activity_main_space"
        android:padding="@dimen/activity_main_space"
        android:src="@mipmap/ic_preload_img" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center_horizontal"
        android:layout_margin="@dimen/activity_main_space"
        android:orientation="horizontal"
        android:padding="@dimen/activity_main_space">

        <Button
            android:id="@+id/obj_dialog_image_btn_retake"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/activity_main_space"
            android:layout_weight="1"
            android:background="@drawable/background_theme_button"
            android:onClick="dismissListener"
            android:text="@string/alert_dialog_manager_img_take_new"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@color/light_red" />

        <Button
            android:id="@+id/obj_dialog_image_btn_cancel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/activity_main_space"
            android:layout_weight="1"
            android:background="@drawable/background_theme_button"
            android:onClick="dismissListener"
            android:text="@string/alert_dialog_manager_img_use_this"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@color/teal" />
    </LinearLayout>
</LinearLayout>