<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:minWidth="@dimen/alert_dialog_manager_min_width"
    android:orientation="vertical"
    android:padding="0dp"
    android:weightSum="1">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/activity_main_space"
        android:background="@color/colorPrimaryLTDark"
        android:gravity="center_horizontal"
        android:padding="@dimen/activity_main_space"
        android:text="@string/alert_dialog_manager_img_title"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="@color/white" />

    <com.isseiaoki.simplecropview.CropImageView xmlns:custom="http://schemas.android.com/apk/res-auto"
        android:id="@+id/obj_dialog_crop_image_civ"
        android:layout_width="match_parent"
        android:layout_height="@dimen/alert_dialog_manager_single_img_size"
        android:layout_gravity="center"
        android:padding="@dimen/activity_main_space"
        custom:scv_background_color="@color/colorPrimary"
        custom:scv_crop_mode="circle_square"
        custom:scv_frame_color="@color/colorAccent"
        custom:scv_frame_stroke_weight="@dimen/activity_main_img_frame"
        custom:scv_guide_color="@color/colorAccent"
        custom:scv_guide_show_mode="show_on_touch"
        custom:scv_guide_stroke_weight="@dimen/activity_main_img_frame"
        custom:scv_handle_color="@color/colorAccent"
        custom:scv_handle_show_mode="show_always"
        custom:scv_handle_size="@dimen/activity_main_space"
        custom:scv_min_frame_size="@dimen/activity_main_min_img_size"
        custom:scv_overlay_color="@color/semi_gray"
        custom:scv_touch_padding="@dimen/activity_main_space" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center_horizontal"
        android:layout_margin="@dimen/activity_main_space"
        android:orientation="horizontal"
        android:padding="@dimen/activity_main_space">

        <Button
            android:id="@+id/obj_dialog_crop_image_btn_crop"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/activity_main_space"
            android:layout_weight="1"
            android:background="@drawable/background_theme_button"
            android:onClick="dismissListener"
            android:text="@string/alert_dialog_manager_crop_img_crop"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@color/light_red" />

        <Button
            android:id="@+id/obj_dialog_crop_image_btn_cancel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/activity_main_space"
            android:layout_weight="1"
            android:background="@drawable/background_theme_button"
            android:onClick="dismissListener"
            android:text="@string/alert_dialog_manager_img_use_this"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@color/teal" />
    </LinearLayout>
</LinearLayout>