<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

        <variable
            name="building"
            type="com.tsungweiho.intelligentpowersaving.objects.Building" />
    </data>

    <LinearLayout xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimaryDark"
        android:orientation="vertical">

        <FrameLayout
            android:id="@+id/fragment_building_frame_layout"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimaryLTDark"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/fragment_building_ib_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left|center_vertical"
                android:background="@drawable/background_theme_button"
                android:src="@mipmap/ic_back" />

            <TextView
                android:id="@+id/fragment_building_tv_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:text="@{building.name}"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="@color/white" />
        </FrameLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/activity_half_horizontal_margin"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/fragment_building_iv"
                    android:layout_width="@dimen/activity_main_img_size"
                    android:layout_height="@dimen/activity_main_img_size"
                    android:layout_gravity="center"
                    android:layout_margin="@dimen/activity_main_space"
                    app:imageUrl="@{building.imageUrl}" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/activity_main_space"
                        android:padding="@dimen/activity_main_space"
                        android:text="@string/info_title"
                        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                        android:textColor="@color/white" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/activity_main_space"
                        android:lineSpacingExtra="@dimen/activity_main_space"
                        android:padding="@dimen/activity_main_space"
                        android:text="@string/loading"
                        android:textAppearance="@style/TextAppearance.AppCompat.Small"
                        android:textColor="@color/white"
                        app:consumption="@{building.consumption}" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/activity_main_space"
                        android:padding="@dimen/activity_main_space"
                        android:text="@string/loading"
                        android:textAppearance="@style/TextAppearance.AppCompat.Small"
                        android:textColor="@color/white"
                        app:detail="@{building.detail}" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/fragment_building_ll_chart"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="@dimen/activity_vertical_margin"
                android:layout_marginRight="@dimen/activity_vertical_margin"
                android:orientation="horizontal"
                android:padding="@dimen/activity_main_space"></LinearLayout>

            <LinearLayout
                android:id="@+id/fragment_building_ib_follow"
                android:layout_width="@dimen/activity_main_single_row_btn_width"
                android:layout_height="wrap_content"
                android:background="@drawable/background_theme_button"
                android:gravity="center"
                android:orientation="horizontal"
                android:padding="@dimen/activity_main_space">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/activity_main_space"
                    android:clickable="false"
                    android:src="@mipmap/ic_follow" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/activity_main_space"
                    android:text="@string/follow_this"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:textColor="@color/white" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</layout>